# musa-611-spring-2022-week5

./: package-lock.json  package.json  review.md
data/: schools.js  scores.js
data/demographics/: 1010.json  1020.json  1030.json  1050.json  1100.json  1130.json  1190.json  1200.json  1230.json  1250.json  1260.json  1280.json  1290.json  1300.json  1340.json  1350.json  1360.json  1370.json  1380.json  1390.json  1400.json  1410.json  1420.json  1440.json  1460.json  1470.json  1490.json  1580.json  2000.json  2010.json  2020.json  2050.json  2140.json  2160.json  2190.json  2210.json  2240.json  2260.json  2290.json  2320.json  (+283 more)
data/raw/: 2021-2022 Enrollment & Demographics.csv  2021-2022 Master School List (20211105).csv  Catchment_Retention_Details_Schools_2020-2021.csv  SDP_College_Matriculation_2019-2020.csv  SDP_Graduation_Rates_School_S.csv  SPR_SY1819_School_Metric_Scores_20200127.xlsx
data/scripts/: process_demographics.py  process_schools.py  process_scores.py  pyproject.toml
exercise/school-explorer-redux/: index.css  index.html  index.js
